# vibes-dey-find-you

./: README.md  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx  MusicCard.css  MusicCard.jsx
src/api/: requests.py  responses.py  server.py
src/client/: base.py  http_client.py
src/db/: base.py  crud.py  engine.py  session.py
src/db/crud/: core.py  ml.py  vector.py
src/db/tables/: core.py  ml.py
src/ml/: dataset.py  embedding.py  features.py  model.py  preprocess.py
src/schemas/: __init__.py  artist.py  audio_features.py  date.py  song.py
src/services/: last_fm_service.py  model_management_service.py  music_brainz_service.py  recco_beats_service.py  recommender.py
tests/: conftest.py
tests/client/: test_http_client.py
tests/db/: test_crud.py
tests/db/crud/: core.py  test_core.py  test_ml.py  test_vector.py
tests/fixtures/: audio_features_response.json  multiple_artists.json  multiple_recordings.json  recco_beats_artists.json  recco_beats_songs.json
tests/services/: test_music_brainz.py  test_recco_beats_service.py
