[project]
name = "vibes-dey-find-you"
version = "0.1.0"
description = "Bring the vibes to you."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
]
