[project]
name = "vibes-dey-find-you"
version = "0.1.0"
description = "Bring the vibes to you."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "mlflow>=3.10.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.48",
    "torch>=2.11.0",
]
